test-suite/bugs/bug_19231.v
Set Universe Polymorphism.

Fail Lemma vroom@{q; |} : (True : Univ@{q;_}).
